--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -177,7 +177,9 @@ pluto-output p:first-child {
     margin-block-start: 0px;
 }
 
-pluto-output strong {
+/* https://github.com/necolas/normalize.css/blob/fc091cce1534909334c1911709a39c22d406977b/normalize.css#L96 */
+b,
+strong {
     font-weight: bolder;
 }
 
