--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -6,6 +6,7 @@
         --main-bg-color: white;
         --rule-color: rgba(0, 0, 0, 0.15);
         --kbd-border-color: #dfdfdf;
+        --header-bg-color: white;
         --header-border-color: rgba(0, 0, 0, 0.1);
         --atag-color: black;
         --ui-button-color: #2a2a2b;
