--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -440,7 +440,7 @@ body > header {
     width: 100%;
     min-height: 60px;
     z-index: 50;
-    background-color: var(--main-bg-color);
+    background-color: var(--header-bg-color);
     transform: translateY(0px);
     transition: background-color 0.5s ease-in-out, transform 0.25s cubic-bezier(0.18, 0.89, 0.49, 1.13);
     border-bottom: solid 1px var(--header-border-color);
