--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -423,7 +423,7 @@ kbd {
     font-size: 0.7rem;
     letter-spacing: -0.7px;
     border: 1px solid var(--kbd-border-color);
-    padding: 0px 2px;
+    padding: 0px 5px;
     border-radius: 3px;
 }
 
@@ -897,6 +897,7 @@ main > preamble #saveall-container {
     right: min(0px, 700px + 25px - 100vw);
     position: relative;
     background: var(--overlay-button-bg);
+    color: var(--overlay-button-color);
     padding: 5px 8px;
     border: 3px solid var(--overlay-button-border);
     border-radius: 12px;
@@ -917,6 +918,9 @@ main > preamble #saveall-container {
     pointer-events: all;
     /* break-inside: avoid; */
     white-space: nowrap;
+}
+.overlay-button button:not(.asdfdsf) {
+    color: var(--overlay-button-color);
 }
 
 main > preamble #saveall-container {
