--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -185,6 +185,7 @@ pluto-tree-more::before {
     height: 1em;
     width: 1em;
     opacity: 0.5;
+    filter: var(--image-filters);
     background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ellipsis-vertical.svg");
 }
 
