--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2373,8 +2373,11 @@ pluto-input .cm-editor .cm-content {
     padding: 2px 0px;
 }
 
-.cm-focused .cm-selectionBackground {
-    background: var(--cm-selection-background) !important;
+.cm-editor .cm-selectionBackground {
+    background: var(--cm-selection-background-blurred);
+}
+.cm-editor.cm-focused .cm-selectionBackground {
+    background: var(--cm-selection-background);
 }
 
 .cm-editor {
